--- a/Pages/Habitaciones.html
+++ b/Pages/Habitaciones.html
@@ -5,34 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Images/logo-pestaña.svg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../Css/Style.css">
     <title>HABITACIONES - City Hotel Boutique</title>
 </head>
 <body>
 <!-- INICIO DEL HEADER -->
-    <header class="header">
-        <a href="../index.html"><img class="header__logo" src="../Images/logo-hotel.svg" alt="City Hotel Boutique"></a>
-        <nav class="header__nav">
-            <ul class="header__pages">
-                <li><a class="header__pages__link" href="../index.html">HOME</a></li>
-                <li><a class="header__pages__link main--link" href="./Habitaciones.html">HABITACIONES</a></li>
-                <li><a class="header__pages__link" href="./Servicios.html">SERVICIOS</a></li>
-                <li><a class="header__pages__link" href="./Galeria.html">GALERIA</a></li>
-                <li><a class="header__pages__link" href="./Contacto.html">CONTACTO</a></li>
-            </ul>
-        </nav>
-        <section class="header__social">
-            <a href=""><img class="header__social__link" src="../Images/instagram.svg" alt="instagram"></a>
-            <a href=""><img class="header__social__link" src="../Images/facebook.svg" alt="facebook"></a>
-            <a href=""><img class="header__social__link" src="../Images/tripadvisor.svg" alt="tripadvisor"></a>
-        </section>
+    <header class="navbar navbar-expand-lg header--color">
+        <div class="container-fluid header__nav container">
+            <a class="navbar-brand" href="../index.html"><img class="header__logo" src="../Images/logo-hotel.svg" alt="City Hotel Boutique"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto ms-auto header__pages">
+                    <li class="nav-item"><a class="header__pages__link nav-link" href="../index.html">HOME</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link main--link" href="./Habitaciones.html">HABITACIONES</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Servicios.html">SERVICIOS</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Galeria.html">GALERIA</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Contacto.html">CONTACTO</a></li>
+                </ul>
+                <section class="header__social d-flex flex-row justify-content-center">
+                    <a href=""><img class="header__social__link" src="../Images/instagram.svg" alt="instagram"></a>
+                    <a href=""><img class="header__social__link" src="../Images/facebook.svg" alt="facebook"></a>
+                    <a href=""><img class="header__social__link" src="../Images/tripadvisor.svg" alt="tripadvisor"></a>
+                </section>
+            </div>
+        </div>
     </header> 
 <!-- FIN DEL HEADER       -->
 <!-- MAIN DE LA PAGINA -->
-    <img class="top--img" src="../Images/habitacion-top-habitaciones 1.jpg" alt="seccion habitaciones">
+    <!-- <picture></picture>
+    <img class="top--img" src="../Images/habitacion-top-habitaciones.jpg" alt="seccion habitaciones"> -->
+    <section class="top__image--room">
+        <h1 class="top__text">HABITACIONES</h1>
+    </section>
     <main>
-        <h1 class="title text--yellow">HABITACIONES</h1>
         <section>
             <article class="room">
                 <div class="room__text data-aos="fade-right"">
@@ -41,16 +50,56 @@
                         Escritorio de trabajo, Personal Bar, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Conexión Wi-Fi sin cargo, Secador y Productos de tocador, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido)
                     </p>
                 </div>
-                <img class="room__img" data-aos="fade-left" src="../Images/Habitacion-Standard-1.jpg" alt="habitacion Doble Estandar">
+                <div id="carouselExampleControls2" data-aos="fade-right" class="carousel slide container__carousel" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                        <img class="room__img" src="../Images/Habitacion-Standard-1.jpg" alt="habitacion Doble Estandar">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="room__img" src="../Images/Habitacion-Standard-2.jpg"  alt="habitacion Doble Estandar">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="room__img" src="../Images/Habitacion-Standard-3.jpg"  alt="habitacion Doble Estandar">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </article>
             <article class="room__reverse">
-                <div class="room__text" data-aos="fade-left">
+                <div class="room__text" data-aos="fade-right">
                     <h2 class="subtitle text--yellow">Habitación Doble Superior</h2><br>
                     <p>
                         Diseño exclusivo, Amplio escritorio de trabajo, Personal Bar, Batas y pantuflas, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Cafetera Nespresso, Conexión Wi-Fi sin cargo, Secador de pelo, Amenities exclusivos, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p>
                 </div>
-                <img class="room__img" data-aos="fade-right" src="../Images/habitacion-superior-1.jpg" alt="habitacion Doble Superior">
+                <div id="carouselExampleControls3" data-aos="fade-right" class="carousel slide container__carousel" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                        <img class="room__img" src="../Images/habitacion-superior-1.jpg" alt="habitacion Doble Superior">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="room__img" src="../Images/Habitacion-Superior-2.jpg"  alt="habitacion Doble Superior">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="room__img" src="../Images/Habitacion-superior-3.jpg"  alt="habitacion Doble Superior">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls3" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls3" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </article>
             <article class="room">
                 <div class="room__text" data-aos="fade-right">
@@ -59,10 +108,31 @@
                         Hirdomasaje para 2 personas, Escritorios de trabajo, Diseño exclusivo, Personal bar, Cafetera Nespresso, Batas y pantuflas, 2 Smart TV, Teléfono inalámbrico, Conexión wi-fi sin cargo, Secador de pelo, Plancha de pelo (a pedido), Amenities exclusivos, Caja de seguridad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p>
                 </div>
-                <img class="room__img" data-aos="fade-left" src="../Images/Jacuzzi-Suite-Deluxe-1.jpg" alt="habitacion Deluxer Jacuzzi">
+                <div id="carouselExampleControls4" data-aos="fade-right" class="carousel slide container__carousel" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                        <img class="room__img" src="../Images/Jacuzzi-Suite-Deluxe-1.jpg" alt="habitacion Deluxer Jacuzzi">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="room__img" src="../Images/Suite-Deluxe-2.jpg"  alt="habitacion Deluxer Jacuzzi">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="room__img" src="../Images/bano-Suite-Deluxe-3.jpg"  alt="habitacion Deluxer Jacuzzi">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls4" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls4" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                <!-- <img class="room__img" data-aos="fade-left" src="../Images/Jacuzzi-Suite-Deluxe-1.jpg" alt="habitacion Deluxer Jacuzzi"> -->
             </article>
         </section>
-        <section class="form">
+        <section class="form1">
             <form class="form__checkin" action="" method="post">
                 <label class="text--white" for="check-in">Check In</label>
                 <input type="date" name="check-in" id="check-in" required>
@@ -107,6 +177,7 @@
         </section>   
     </footer>
 <!-- FIN DEL FOOTER -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init();
