--- a/Pages/Servicios.html
+++ b/Pages/Servicios.html
@@ -5,34 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Images/logo-pestaña.svg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../Css/Style.css">
     <title>SERVICIOS - City Hotel Boutique</title>
 </head>
 <body>
 <!-- INICIO DEL HEADER -->
-    <header class="header">
-        <a href="../index.html"><img class="header__logo" src="../Images/logo-hotel.svg" alt="City Hotel Boutique"></a>
-        <nav class="header__nav">
-            <ul class="header__pages">
-                <li><a class="header__pages__link" href="../index.html">HOME</a></li>
-                <li><a class="header__pages__link" href="./Habitaciones.html">HABITACIONES</a></li>
-                <li><a class="header__pages__link main--link" href="./Servicios.html">SERVICIOS</a></li>
-                <li><a class="header__pages__link" href="./Galeria.html">GALERIA</a></li>
-                <li><a class="header__pages__link" href="./Contacto.html">CONTACTO</a></li>
-            </ul>
-        </nav>
-        <section class="header__social">
-            <a href=""><img class="header__social__link" src="../Images/instagram.svg" alt="instagram"></a>
-            <a href=""><img class="header__social__link" src="../Images/facebook.svg" alt="facebook"></a>
-            <a href=""><img class="header__social__link" src="../Images/tripadvisor.svg" alt="tripadvisor"></a>
-        </section>
+    <header class="navbar navbar-expand-lg header--color">
+        <div class="container-fluid header__nav container">
+            <a class="navbar-brand" href="../index.html"><img class="header__logo" src="../Images/logo-hotel.svg" alt="City Hotel Boutique"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto ms-auto header__pages">
+                    <li class="nav-item"><a class="header__pages__link nav-link" href="../index.html">HOME</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Habitaciones.html">HABITACIONES</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link main--link" href="./Servicios.html">SERVICIOS</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Galeria.html">GALERIA</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Contacto.html">CONTACTO</a></li>
+                </ul>
+                <section class="header__social d-flex flex-row justify-content-center">
+                    <a href=""><img class="header__social__link" src="../Images/instagram.svg" alt="instagram"></a>
+                    <a href=""><img class="header__social__link" src="../Images/facebook.svg" alt="facebook"></a>
+                    <a href=""><img class="header__social__link" src="../Images/tripadvisor.svg" alt="tripadvisor"></a>
+                </section>
+            </div>
+        </div>
     </header> 
 <!-- FIN DEL HEADER       -->
 <!-- MAIN DE LA PAGINA -->
-    <img class="top--img" src="../Images/picina-top-servicios.png" alt="seccion servicios">
+    <section class="top__image--service">
+        <h1 class="top__text">SERVICIOS</h1>
+    </section>
     <main>
-        <h1 class="title text--yellow">SERVICIOS</h1>
         <section>
             <article class="service">
                 <div class="service__text" data-aos="fade-right">
@@ -51,10 +58,30 @@
                         <li>-Asesoramiento y asistencia en reservas de shows, restaurantes, teatros y excursiones</li>
                     </ul> 
                 </div>
-                <img class="service__img" data-aos="fade-left" src="../Images/Servicios-buffet-incluidos.jpg" alt="servicios incluidos">
+                <div id="carouselExampleControls5" data-aos="fade-right" class="carousel slide container__carousel" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                        <img class="service__img" src="../Images/Servicios-buffet-incluidos.jpg" alt="servicios incluidos">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="service__img" src="../Images/Servicios-picina-incluidos.jpg"  alt="servicios incluidos">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="service__img" src="../Images/Servicios-reunion-incluidos.jpg"  alt="servicios incluidos">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls5" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls5" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </article>
             <article class="service__reverse">
-                <div class="service__text" data-aos="fade-left">
+                <div class="service__text" data-aos="fade-right">
                     <h2 class="subtitle text--yellow">OPCIONALES</h2><br>
                     <ul>
                         <li>-Estacionamiento</li>
@@ -69,7 +96,27 @@
                         <li>-Agencia de viajes y Turismo</li>
                     </ul>
                 </div>
-                <img class="service__img" data-aos="fade-right" src="../Images/Servicios-tango-opcionales.jpg" alt="servicios OPCIONALES">  
+                <div id="carouselExampleControls6" data-aos="fade-right" class="carousel slide container__carousel" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                        <img class="service__img" src="../Images/Servicios-bus-opcionales.jpg" alt="servicios opcionales">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="service__img" src="../Images/Servicios-tango-opcionales.jpg"  alt="servicios opcionales">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="service__img" src="../Images/Servicios-trainer-opcionales.jpg"  alt="servicios opcionales">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls6" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls6" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </article>
             <article class="service">
                 <div class="service__text" data-aos="fade-right">
@@ -85,12 +132,32 @@
                         <li>-Pequeña piscina</li>
                     </ul>
                 </div>
-                <img class="service__img" data-aos="fade-left" src="../Images/Servicios-spa.jpg" alt="servicios spa">
+                <div id="carouselExampleControls7" data-aos="fade-right" class="carousel slide container__carousel" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                        <img class="service__img" src="../Images/Servicios-spa-masajes.jpg" alt="servicios spa">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="service__img" src="../Images/Servicios-spa.jpg"  alt="servicios spa">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="service__img" src="../Images/Servicios-spa-picina.jpg"  alt="servicios spa">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls7" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls7" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </article>
         </section>
         <p class="title">Vivi una experiencia inolvidable <br>
             Reserva tu próxima estadía en un lugar increíble</p>
-        <section class="form">
+        <section class="form1">
             <form class="form__checkin" action="" method="post">
                 <label class="text--white" for="check-in">Check In</label>
                 <input type="date" name="check-in" id="check-in" required>
@@ -135,6 +202,7 @@
         </section>   
     </footer>
 <!-- FIN DEL FOOTER -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init();
