--- a/Pages/Galeria.html
+++ b/Pages/Galeria.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!-- INICIO DEL HEADER -->
-    <header class="navbar navbar-expand-lg header--color">
+    <header class="navbar navbar-expand-md header--color">
         <div class="container-fluid header__nav container">
             <a class="navbar-brand" href="../index.html"><img class="header__logo" src="../Images/logo-hotel.svg" alt="City Hotel Boutique"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,7 @@
 <!-- FIN DEL HEADER       -->
 <!-- MAIN DE LA PAGINA -->
     <section class="top__image--galery">
-        <h1 class="top__text">GALERIA</h1>
+        <h1 class="top__text"><span class="top__background">GALERIA</span></h1>
     </section>
     <main>
          <h2 class="title text--yellow">CONOCE NUESTRAS INSTALACIONES</h2>
@@ -56,13 +56,13 @@
                 <img data-aos="flip-up" src="../Images/galeria-12.jpg" alt="bufette hotel">
             </section>
             <section class="form1">
-                <form class="form__checkin" action="" method="post">
+                <form class="form__checkin" action="" method="post" data-aos="zoom-in">
                     <label class="text--white" for="check-in">Check In</label>
-                    <input type="date" name="check-in" id="check-in" required>
+                    <input class="form__data" type="date" name="check-in" id="check-in" required>
                     <label class="text--white" for="check-out">Check Out</label>
-                    <input type="date" name="check-out" id="check-out" required>
+                    <input class="form__data" type="date" name="check-out" id="check-out" required>
                     <label class="text--white" for="guest">Huéspedes</label>
-                    <input type="number" name="guest" id="guest" required>
+                    <input class="form__data" type="number" name="guest" id="guest" required>
                     <button type="submit">RESERVAR</button>
                 </form>
             </section>
