--- a/Pages/Galeria.html
+++ b/Pages/Galeria.html
@@ -56,13 +56,13 @@
                 <img data-aos="flip-up" src="../Images/galeria-12.jpg" alt="bufette hotel">
             </section>
             <section class="form1">
-                <form class="form__checkin" action="" method="post" data-aos="zoom-in">
+                <form class="form1__checkin" action="" method="post" data-aos="zoom-in">
                     <label class="text--white" for="check-in">Check In</label>
-                    <input class="form__data" type="date" name="check-in" id="check-in" required>
+                    <input class="form1__data" type="date" name="check-in" id="check-in" required>
                     <label class="text--white" for="check-out">Check Out</label>
-                    <input class="form__data" type="date" name="check-out" id="check-out" required>
+                    <input class="form1__data" type="date" name="check-out" id="check-out" required>
                     <label class="text--white" for="guest">Huéspedes</label>
-                    <input class="form__data" type="number" name="guest" id="guest" required>
+                    <input class="form1__data" type="number" name="guest" id="guest" required>
                     <button type="submit">RESERVAR</button>
                 </form>
             </section>
