--- a/Pages/Habitaciones.html
+++ b/Pages/Habitaciones.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En City hotel boutique te encontraras con variadas habitaciones, diseñadas para cumplir con tus necesidades.">
+    <meta name="keywords" content="hotel, hoteleria, hotel boutique, city hotel boutique, turismo, caba, ciudad de buenos aires, buenos aires, capital federal, habitaciones, habitaciones deluxe, restaurante, restaurante mezcal, spa, picina, hotel en el centro, masajes">
     <link rel="shortcut icon" href="../Images/logo-pestaña.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
